chore: npm updates, api endpoint updates

--- a/public/index.html
+++ b/public/index.html
@@ -62,5 +62,6 @@
 <script src="/main.js"></script>
 <!--<script src="/chums.js"></script>-->
 <script src="/vendors.js"></script>
+<script src="/vendors-react.js"></script>
 </body>
 </html>
